<resources>

    <string name="app_name">Barometre</string>

    <string name="offline_banner">You are offline. Showing cached bars.</string>
    <string name="bar_image_description">Photo of the bar</string>
    <string name="bars_near_me">Bars near me</string>

    <string name="menu_filter">Filter by type</string>
    <string name="filters_title">Filters</string>

    <string name="menu_bars_near_me">Bars near me</string>
    <string name="filters_subtitle">Refine the bars you want to discover.</string>

    <string name="filter_bar_type">Bar type</string>
    <string name="filter_minimum_rating">Minimum rating</string>

    <string name="filter_distance">Distance</string>
    <string name="apply_filters">Apply filters</string>

    <string name="reset_filters">Reset</string>

    <string name="map_api_key">google maps api key</string>

    <string name="menu_sort_by_rating">Sort by rating</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_filter_all">All</string>
    <string name="menu_filter_beer">Beer</string>
    <string name="menu_filter_wine">Wine</string>
    <string name="menu_filter_rooftop">Rooftop</string>
    <string name="menu_filter_cocktail">Cocktail</string>
    <string name="menu_filter_pub">Pub</string>

    <string name="map_view">Map view</string>
    <string name="list_view">List view </string>

    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Customise your nightlife discovery experience</string>
    <string name="settings_dark_mode">Dark neon mode</string>
    <string name="favorites_empty">No favourites yet. Tap a bar and long-press to save it.</string>
    <string name="add_to_favourites">Add to Favourites</string>

    <string name="placeholder_bar_name">bar name</string>
    <string name="no_bars_found">No bars found :(</string>

    <string name="placeholder_rating">Rating</string>
    <string name="label_address">Address</string>
    <string name="placeholder_address">Address</string>
    <string name="label_opening_hours">Opening Hours</string>
    <string name="btn_open_website">Open Website</string>
    <string name="btn_get_directions">Get Directions</string>
    <string name="btn_share">Share</string>

</resources>
